# google-analytics-mcp

./: .gitignore  CONTRIBUTING.md  README.md  app.py  noxfile.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: presubmit.yaml
analytics_mcp/tools/: utils.py
analytics_mcp/tools/admin/: info.py
analytics_mcp/tools/reporting/: core.py  realtime.py
